--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,23 @@
 </head>
 
 <body>
-    <div class="container">
-        <h1>Hello</h1>
-    </div>
+    <section class="promo">
+        <div class="container">
+            <header class="header">
+                <a href="#" class="header__logo"><img src="icons/logo.png" alt=""></a>
+                <div class="header__title">
+                    Официальный представитель
+                    <span>Garmin, Polar, Suunto</span>
+                </div>
+                <div class="header__call">
+                    <a href="tel:+74999228974" class="header__phone">+7 (499) 922-89-74</a>
+                    <button class="btn">заказать звонок</button>
+                </div>
+            </header>
+
+        </div>
+
+    </section>
 
 
 </body>
