--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,34 @@
                     <button class="btn">заказать звонок</button>
                 </div>
             </header>
+            <div class="promo__container">
+                <div class="promo__phrase">
+                    <h1 class="promo__title">Подбор пульсометра</h1>
+                    <h2 class="promo__subtitle">с учётом Вашего уровня подготовки</h2>
+                </div>
+                <div class="promo__adv">
+                    <div class="promo__item">
+                        <img src="icons/019_timer_time_stopwatch_2-64.png" alt="">
+                        Время подбора: <br>
+                        10 минут
+                    </div>
+                    <div class="promo__item">
+                        <img src="icons/app-08-hand-cart-64.png" alt="">
+                        Бесплатная <br>
+                        доставка
+                    </div>
+                    <div class="promo__item">
+                        <img src="icons/messages-64.png" alt="">
+                        Ответим <br>
+                        на все вопросы
+                    </div>
+                </div>
+                <div class="promo__contact">
+                    <button class="btn btn_main">заказать консультакцию</button>
+                    <span>или <a href="#">перейти в каталог</a></span>
+                </div>
+
+            </div>
 
         </div>
 
