Create advantage block

--- a/src/index.html
+++ b/src/index.html
@@ -57,6 +57,44 @@
 
     </section>
 
+    <section class="advantage">
+        <div class="container">
+            <div class="title">
+                наши преимущества
+            </div>
+            <div class="advantage__inner">
+                <div class="advantage__item">
+                    <div class="advantage__icon">
+                        <img src="icons/cup.png" alt="cup">
+                    </div>
+                    <div class="advantage__name">Делимся опытом</div>
+                    <div class="advatage__text">Наши сотрудники всегда готовы поделиться своим опытом,
+                        так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!
+                    </div>
+                </div>
+                <div class="advantage__item">
+                    <div class="advantage__icon">
+                        <img src="icons/heart.png" alt="heart">
+                    </div>
+                    <div class="advantage__name">Заботимся о здоровье</div>
+                    <div class="advatage__text">Мы работаем для того,
+                        чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!
+                    </div>
+                </div>
+                <div class="advantage__item">
+                    <div class="advantage__icon">
+                        <img src="icons/shoe.png" alt="shoes">
+                    </div>
+                    <div class="advantage__name">Учим бегать</div>
+                    <div class="advatage__text">Помогаем с обучением
+                        правильной технике бега!<br>
+                        Дружим с крупнейшей школой бега в России - <a class="advantage__link" href="#">I LOVE
+                            RUNNING.</a> </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
 </body>
 
