Create consult block. Created block with forms. Added button modificator _submit

--- a/src/index.html
+++ b/src/index.html
@@ -58,10 +58,10 @@
     </section>
 
     <section class="advantage">
-        <div class="container">
-            <div class="title">
+        <h2 class="container">
+            <h2 class="title">
                 наши преимущества
-            </div>
+            </h2>
             <div class="advantage__inner">
                 <div class="advantage__item">
                     <div class="advantage__icon">
@@ -91,6 +91,25 @@
                         Дружим с крупнейшей школой бега в России - <a class="advantage__link" href="#">I LOVE
                             RUNNING.</a> </div>
                 </div>
+            </div>
+            </div>
+    </section>
+    <section class="consult">
+        <div class="container">
+            <div class="consult__inner">
+                <h2 class="title title_left">Получите бесплатную консультацию
+                    по подбору пульсометра</h2>
+                <div class="consult__form-title">
+                    Просто заполните форму заявки <br>
+                    и мы перезвоним вам в течении 10 минут
+                </div>
+                <form action="#" class="feed-form">
+
+                    <input name="name" type="text" placeholder="Ваше имя">
+                    <input name="phone" type="tel" placeholder="Ваш номер телефона">
+                    <input name="mail" type="email" placeholder="Ваш E-mail">
+                    <button class="btn btn_submit">заказать кОНСУЛЬТАЦИЮ</button>
+                </form>
             </div>
         </div>
     </section>
