Corrected advantage section in html file

--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
     </section>
 
     <section class="advantage">
-        <h2 class="container">
+        <div class="container">
             <h2 class="title">
                 наши преимущества
             </h2>
@@ -92,7 +92,7 @@
                             RUNNING.</a> </div>
                 </div>
             </div>
-            </div>
+        </div>
     </section>
     <section class="consult">
         <div class="container">
