--- a/src/index.html
+++ b/src/index.html
@@ -114,7 +114,8 @@
         </div>
     </section>
 
-
+    <script src="js/tiny-slider.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
