--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/font.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/tiny-slider.css">
     <link rel="stylesheet" href="css/style.min.css">
     <title>Puls</title>
 </head>
@@ -110,6 +111,25 @@
                     <input name="mail" type="email" placeholder="Ваш E-mail">
                     <button class="btn btn_submit">заказать кОНСУЛЬТАЦИЮ</button>
                 </form>
+            </div>
+        </div>
+    </section>
+    <section class="slider">
+        <div class="container">
+            <div class="slider__wrapper">
+                <div class="slider__puls">
+                    <div class="slider__item">
+                        <img src="img/4b6197c393e2d3fdb5980c4d5d8f2856.jpg" alt="">
+                    </div>
+                    <div class="slider__item">
+                        <img src="img/polar-m400-triple.jpg" alt="">
+                    </div>
+                    <div class="slider__item">
+                        <img src="img/polar-m600-trio-1470174547-vnNI-column-width-inline.jpg" alt="">
+                    </div>
+                </div>
+                <button class="slider__button slider__button_prev"><img src="icons/back.svg" alt=""></button>
+                <button class="slider__button slider__button_next"><img src="icons/next.svg" alt=""></button>
             </div>
         </div>
     </section>
