--- a/src/index.html
+++ b/src/index.html
@@ -133,6 +133,52 @@
             </div>
         </div>
     </section>
+    <section class="catalog">
+        <div class="container">
+            <h2 class="title">каталог пульсометров</h2>
+            <div class="catalog__tabs">
+                <div class="catalog__tab">
+                    <div class="catalog__tab-name">для фитнеса</div>
+                </div>
+                <div class="catalog__tab">
+                    <div class="catalog__tab-name">для бега</div>
+                </div>
+                <div class="catalog__tab">
+                    <div class="catalog__tab-name">для триатлона</div>
+                </div>
+            </div>
+            <div class="catalog__wrapper">
+                <div class="product__item">
+                    <div class="product__item_front">
+                        <img src="img/puls.jpg" alt="" class="product__photo">
+                        <div class="product__name">Пульсометр Polar FT1</div>
+                        <div class="product__dscr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
+                        <a href="#" class="product__link">подробнее</a>
+                    </div>
+                    <div class="product__info">
+                        <ul class="product__info-inner">
+                            <li><span>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</span></li>
+                            <li><span>Вы увидите информативный графический индикатор целевых тренировочных зон
+                                    пульса;</span></li>
+                            <li><span>Также Вы увидите информацию о расходе калорий за тренировку;</span></li>
+                            <li><span>Вы сможете посмотреть данные по 10 тренировкам.
+                                </span></li>
+                        </ul>
+                        <a href="#" class="product__link">назад</a>
+                    </div>
+                    <div class="hr"></div>
+                    <div class="product__footer">
+                        <div class="product__prices">
+                            <div class="product__price_old">4 750 руб.</div>
+                            <div class="product__price_new">4 600 руб.</div>
+                        </div>
+                        <button class="btn btn_small">купить</button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
 
     <script src="js/tiny-slider.js"></script>
     <script src="js/app.js"></script>
