--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
                 <a href="#" class="header__logo"><img src="icons/logo.png" alt=""></a>
                 <div class="header__title">
                     Официальный представитель
-                    <span>Garmin, Polar, Suunto</span>
+                    Garmin, Polar, Suunto
                 </div>
                 <div class="header__call">
                     <a href="tel:+74999228974" class="header__phone">+7 (499) 922-89-74</a>
@@ -49,7 +49,7 @@
                 </div>
                 <div class="promo__contact">
                     <button class="btn btn_main">заказать консультакцию</button>
-                    <span>или <a href="#">перейти в каталог</a></span>
+                    или <a href="#">перейти в каталог</a>
                 </div>
 
             </div>
@@ -148,23 +148,182 @@
                 </div>
             </div>
             <div class="catalog__wrapper">
-                <div class="product__item">
-                    <div class="product__item_front">
-                        <img src="img/puls.jpg" alt="" class="product__photo">
-                        <div class="product__name">Пульсометр Polar FT1</div>
-                        <div class="product__dscr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
-                        <a href="#" class="product__link">подробнее</a>
+                <div class="product-item">
+                    <div class="product-item__wrapper">
+                        <div class="product-item__front">
+                            <img src="img/puls.jpg" alt="" class="product__photo">
+                            <div class="product__name">Пульсометр Polar FT1</div>
+                            <div class="product__dscr">Для первых шагов в тренировках, основанных на сердечном ритме
+                            </div>
+                            <a href="#" class="product__link">подробнее</a>
+                        </div>
+                        <div class="product-item__info">
+                            <ul class="product-item__info-inner">
+                                <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;
+                                </li>
+                                <li>Вы увидите информативный графический индикатор целевых тренировочных зон
+                                    пульса;</li>
+                                <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                                <li>Вы сможете посмотреть данные по 10 тренировкам.
+                                </li>
+                            </ul>
+                            <a href="#" class="product__link_back">назад</a>
+                        </div>
                     </div>
-                    <div class="product__info">
-                        <ul class="product__info-inner">
-                            <li><span>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;</span></li>
-                            <li><span>Вы увидите информативный графический индикатор целевых тренировочных зон
-                                    пульса;</span></li>
-                            <li><span>Также Вы увидите информацию о расходе калорий за тренировку;</span></li>
-                            <li><span>Вы сможете посмотреть данные по 10 тренировкам.
-                                </span></li>
-                        </ul>
-                        <a href="#" class="product__link">назад</a>
+                    <div class="hr"></div>
+                    <div class="product__footer">
+                        <div class="product__prices">
+                            <div class="product__price_old">4 750 руб.</div>
+                            <div class="product__price_new">4 600 руб.</div>
+                        </div>
+                        <button class="btn btn_small">купить</button>
+                    </div>
+                </div>
+                <div class="product-item">
+                    <div class="product-item__wrapper">
+                        <div class="product-item__front">
+                            <img src="img/puls.jpg" alt="" class="product__photo">
+                            <div class="product__name">Пульсометр Polar FT1</div>
+                            <div class="product__dscr">Для первых шагов в тренировках, основанных на сердечном ритме
+                            </div>
+                            <a href="#" class="product__link">подробнее</a>
+                        </div>
+                        <div class="product-item__info">
+                            <ul class="product-item__info-inner">
+                                <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;
+                                </li>
+                                <li>Вы увидите информативный графический индикатор целевых тренировочных зон
+                                    пульса;</li>
+                                <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                                <li>Вы сможете посмотреть данные по 10 тренировкам.
+                                </li>
+                            </ul>
+                            <a href="#" class="product__link_back">назад</a>
+                        </div>
+                    </div>
+                    <div class="hr"></div>
+                    <div class="product__footer">
+                        <div class="product__prices">
+                            <div class="product__price_old">4 750 руб.</div>
+                            <div class="product__price_new">4 600 руб.</div>
+                        </div>
+                        <button class="btn btn_small">купить</button>
+                    </div>
+                </div>
+                <div class="product-item">
+                    <div class="product-item__wrapper">
+                        <div class="product-item__front">
+                            <img src="img/puls.jpg" alt="" class="product__photo">
+                            <div class="product__name">Пульсометр Polar FT1</div>
+                            <div class="product__dscr">Для первых шагов в тренировках, основанных на сердечном ритме
+                            </div>
+                            <a href="#" class="product__link">подробнее</a>
+                        </div>
+                        <div class="product-item__info">
+                            <ul class="product-item__info-inner">
+                                <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;
+                                </li>
+                                <li>Вы увидите информативный графический индикатор целевых тренировочных зон
+                                    пульса;</li>
+                                <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                                <li>Вы сможете посмотреть данные по 10 тренировкам.
+                                </li>
+                            </ul>
+                            <a href="#" class="product__link_back">назад</a>
+                        </div>
+                    </div>
+                    <div class="hr"></div>
+                    <div class="product__footer">
+                        <div class="product__prices">
+                            <div class="product__price_old">4 750 руб.</div>
+                            <div class="product__price_new">4 600 руб.</div>
+                        </div>
+                        <button class="btn btn_small">купить</button>
+                    </div>
+                </div>
+                <div class="product-item">
+                    <div class="product-item__wrapper">
+                        <div class="product-item__front">
+                            <img src="img/puls.jpg" alt="" class="product__photo">
+                            <div class="product__name">Пульсометр Polar FT1</div>
+                            <div class="product__dscr">Для первых шагов в тренировках, основанных на сердечном ритме
+                            </div>
+                            <a href="#" class="product__link">подробнее</a>
+                        </div>
+                        <div class="product-item__info">
+                            <ul class="product-item__info-inner">
+                                <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;
+                                </li>
+                                <li>Вы увидите информативный графический индикатор целевых тренировочных зон
+                                    пульса;</li>
+                                <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                                <li>Вы сможете посмотреть данные по 10 тренировкам.
+                                </li>
+                            </ul>
+                            <a href="#" class="product__link_back">назад</a>
+                        </div>
+                    </div>
+                    <div class="hr"></div>
+                    <div class="product__footer">
+                        <div class="product__prices">
+                            <div class="product__price_old">4 750 руб.</div>
+                            <div class="product__price_new">4 600 руб.</div>
+                        </div>
+                        <button class="btn btn_small">купить</button>
+                    </div>
+                </div>
+                <div class="product-item">
+                    <div class="product-item__wrapper">
+                        <div class="product-item__front">
+                            <img src="img/puls.jpg" alt="" class="product__photo">
+                            <div class="product__name">Пульсометр Polar FT1</div>
+                            <div class="product__dscr">Для первых шагов в тренировках, основанных на сердечном ритме
+                            </div>
+                            <a href="#" class="product__link">подробнее</a>
+                        </div>
+                        <div class="product-item__info">
+                            <ul class="product-item__info-inner">
+                                <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;
+                                </li>
+                                <li>Вы увидите информативный графический индикатор целевых тренировочных зон
+                                    пульса;</li>
+                                <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                                <li>Вы сможете посмотреть данные по 10 тренировкам.
+                                </li>
+                            </ul>
+                            <a href="#" class="product__link_back">назад</a>
+                        </div>
+                    </div>
+                    <div class="hr"></div>
+                    <div class="product__footer">
+                        <div class="product__prices">
+                            <div class="product__price_old">4 750 руб.</div>
+                            <div class="product__price_new">4 600 руб.</div>
+                        </div>
+                        <button class="btn btn_small">купить</button>
+                    </div>
+                </div>
+                <div class="product-item">
+                    <div class="product-item__wrapper">
+                        <div class="product-item__front">
+                            <img src="img/puls.jpg" alt="" class="product__photo">
+                            <div class="product__name">Пульсометр Polar FT1</div>
+                            <div class="product__dscr">Для первых шагов в тренировках, основанных на сердечном ритме
+                            </div>
+                            <a href="#" class="product__link">подробнее</a>
+                        </div>
+                        <div class="product-item__info">
+                            <ul class="product-item__info-inner">
+                                <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;
+                                </li>
+                                <li>Вы увидите информативный графический индикатор целевых тренировочных зон
+                                    пульса;</li>
+                                <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                                <li>Вы сможете посмотреть данные по 10 тренировкам.
+                                </li>
+                            </ul>
+                            <a href="#" class="product__link_back">назад</a>
+                        </div>
                     </div>
                     <div class="hr"></div>
                     <div class="product__footer">
