--- a/src/index.html
+++ b/src/index.html
@@ -494,6 +494,21 @@
             </div>
         </div>
     </section>
+    <footer class="footer">
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2244.4304812014825!2d37.64480195195108!3d55.76839498046216!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a636edcd2ad%3A0x4c2ca101e2c8c617!2z0JzRj9GB0L3QuNGG0LrQuNC5INC_0YAt0LQsIDQvMywg0JzQvtGB0LrQstCwLCAxMDcwNzg!5e0!3m2!1sru!2sru!4v1586193650594!5m2!1sru!2sru"
+            width="100%" height="630" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+            tabindex="0"></iframe>
+        <div class="footer__info">
+            <address class="footer__address">Москва, Мясницкий проезд, д.3с1</address>
+            <a href="tel:+74999228974" class="footer__phone">8 (499) 922-89-74</a>
+            <div class="footer__social">
+                <a href="#"><img src="icons/facebook.svg" alt="facebook"></a>
+                <a href="#"><img src="icons/instagram.svg" alt="instagram"></a>
+                <a href="#"><img src="icons/pinterest.svg" alt="pinterest"></a>
+            </div>
+        </div>
+    </footer>
 
     <script src="js/tiny-slider.js"></script>
     <script src="js/app.js"></script>
