--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
                 <a href="#" class="header__logo"><img src="icons/logo.png" alt=""></a>
                 <div class="header__title">
                     Официальный представитель
-                    Garmin, Polar, Suunto
+                    <span>Garmin, Polar, Suunto</span>
                 </div>
                 <div class="header__call">
                     <a href="tel:+74999228974" class="header__phone">+7 (499) 922-89-74</a>
@@ -48,8 +48,8 @@
                     </div>
                 </div>
                 <div class="promo__contact">
-                    <button class="btn btn_main">заказать консультакцию</button>
-                    или <a href="#">перейти в каталог</a>
+                    <button class="btn btn_main">заказать консультакцию</button><span>
+                        или <a href="#">перейти в каталог</a></span>
                 </div>
 
             </div>
