--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
                 </div>
                 <div class="header__call">
                     <a href="tel:+74999228974" class="header__phone">+7 (499) 922-89-74</a>
-                    <button class="btn">заказать звонок</button>
+                    <button data-modal="consult" class="btn">заказать звонок</button>
                 </div>
             </header>
             <div class="promo__container">
@@ -48,7 +48,7 @@
                     </div>
                 </div>
                 <div class="promo__contact">
-                    <button class="btn btn_main">заказать консультакцию</button><span>
+                    <button data-modal="consult" class="btn btn_main">заказать консультакцию</button><span>
                         или <a href="#">перейти в каталог</a></span>
                 </div>
 
@@ -152,8 +152,39 @@
                     <div class="product-item__wrapper">
                         <div class="product-item__front">
                             <img src="img/puls.jpg" alt="" class="product__photo">
-                            <div class="product__name">Пульсометр Polar FT1</div>
+                            <div class="product__name">Пульсометр Polar FT12</div>
                             <div class="product__dscr">Для первых шагов в тренировках, основанных на сердечном ритме
+                            </div>
+                            <a href="#" class="product__link">подробнее</a>
+                        </div>
+                        <div class="product-item__info">
+                            <ul class="product-item__info-inner">
+                                <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;
+                                </li>
+                                <li>Вы увидите информативный графический индикатор целевых тренировочных зон
+                                    пульса;</li>
+                                <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
+                                <li>Вы сможете посмотреть данные по 10 тренировкам.
+                                </li>
+                            </ul>
+                            <a href="#" class="product__link_back">назад</a>
+                        </div>
+                    </div>
+                    <div class="hr"></div>
+                    <div class="product__footer">
+                        <div class="product__prices">
+                            <div class="product__price_old">4 750 руб.</div>
+                            <div class="product__price_new">4 600 руб.</div>
+                        </div>
+                        <button class="btn btn_small">купить</button>
+                    </div>
+                </div>
+                <div class="product-item">
+                    <div class="product-item__wrapper">
+                        <div class="product-item__front">
+                            <img src="img/puls.jpg" alt="" class="product__photo">
+                            <div class="product__name">Пульсометр Suunto M2</div>
+                            <div class="product__dscr">Пульсометр начального уровня с комфортным тканевым ремешком
                             </div>
                             <a href="#" class="product__link">подробнее</a>
                         </div>
@@ -276,8 +307,9 @@
                     <div class="product-item__wrapper">
                         <div class="product-item__front">
                             <img src="img/puls.jpg" alt="" class="product__photo">
-                            <div class="product__name">Пульсометр Polar FT1</div>
-                            <div class="product__dscr">Для первых шагов в тренировках, основанных на сердечном ритме
+                            <div class="product__name">Пульсометр Polar FT4</div>
+                            <div class="product__dscr">Улучшенная версия Polar FT1, имеющая следующие улучшения:
+
                             </div>
                             <a href="#" class="product__link">подробнее</a>
                         </div>
@@ -297,39 +329,8 @@
                     <div class="hr"></div>
                     <div class="product__footer">
                         <div class="product__prices">
-                            <div class="product__price_old">4 750 руб.</div>
-                            <div class="product__price_new">4 600 руб.</div>
-                        </div>
-                        <button class="btn btn_small">купить</button>
-                    </div>
-                </div>
-                <div class="product-item">
-                    <div class="product-item__wrapper">
-                        <div class="product-item__front">
-                            <img src="img/puls.jpg" alt="" class="product__photo">
-                            <div class="product__name">Пульсометр Polar FT1</div>
-                            <div class="product__dscr">Для первых шагов в тренировках, основанных на сердечном ритме
-                            </div>
-                            <a href="#" class="product__link">подробнее</a>
-                        </div>
-                        <div class="product-item__info">
-                            <ul class="product-item__info-inner">
-                                <li>Вы услышите звуковое оповещение о нужном пульсе во время тренировки;
-                                </li>
-                                <li>Вы увидите информативный графический индикатор целевых тренировочных зон
-                                    пульса;</li>
-                                <li>Также Вы увидите информацию о расходе калорий за тренировку;</li>
-                                <li>Вы сможете посмотреть данные по 10 тренировкам.
-                                </li>
-                            </ul>
-                            <a href="#" class="product__link_back">назад</a>
-                        </div>
-                    </div>
-                    <div class="hr"></div>
-                    <div class="product__footer">
-                        <div class="product__prices">
-                            <div class="product__price_old">4 750 руб.</div>
-                            <div class="product__price_new">4 600 руб.</div>
+                            <div class="product__price_old">7 390 руб.</div>
+                            <div class="product__price_new">6 990 руб.</div>
                         </div>
                         <button class="btn btn_small">купить</button>
                     </div>
@@ -509,6 +510,45 @@
             </div>
         </div>
     </footer>
+
+    <!-- Modal -->
+    <div class="modal">
+        <div class="modal__item" id="consult">
+            <div class="modal__close">&times</div>
+            <div class="modal__title">Просто заполните форму заявки</div>
+            <div class="modal__dscr">и мы перезвоним вам в течении 10 минут</div>
+            <form action="#" class="feed-form">
+
+                <input name="name" type="text" placeholder="Ваше имя">
+                <input name="phone" type="tel" placeholder="Ваш номер телефона">
+                <input name="mail" type="email" placeholder="Ваш E-mail">
+                <button class="btn btn_submit">заказать кОНСУЛЬТАЦИЮ</button>
+            </form>
+
+        </div>
+        <div class="modal__item" id="order">
+            <div class="modal__close">&times</div>
+            <div class="modal__title">Ваш заказ:</div>
+            <div class="modal__dscr">Пульсометр Polar FT1</div>
+            <div>
+                <form action="#" class="feed-form">
+
+                    <input name="name" type="text" placeholder="Ваше имя">
+                    <input name="phone" type="tel" placeholder="Ваш номер телефона">
+                    <input name="mail" type="email" placeholder="Ваш E-mail">
+                    <button class="btn btn_submit">купить</button>
+                </form>
+            </div>
+
+        </div>
+
+        <div class="modal__item modal__item_mini" id="thanks">
+            <div class="modal__close">&times</div>
+            <div class="modal__title">Спасибо за вашу заявку!</div>
+            <div class="modal__dscr">Наш менеджер свяжется с вами
+                в ближайшее время!</div>
+        </div>
+    </div>
 
     <script src="js/tiny-slider.js"></script>
     <script src="js/app.js"></script>
