--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <section class="promo">
+    <section id="header" class="promo">
         <div class="container">
             <header class="header">
                 <a href="#" class="header__logo"><img src="icons/logo.png" alt=""></a>
@@ -549,6 +549,7 @@
                 в ближайшее время!</div>
         </div>
     </div>
+    <a href="#header" class="arrow__up"><img src="icons/up.svg" alt="up arrow"></a>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
     <script src="js/tiny-slider.js"></script>
     <script src="js/app.js"></script>
