some changes in gulpfile

--- a/src/index.html
+++ b/src/index.html
@@ -546,8 +546,8 @@
         </div>
     </div>
     <a href="#header" class="arrow__up"><img src="icons/up.svg" alt="up arrow"></a>
-    <script src="js/tiny-slider.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/tiny-slider.min.js"></script>
+    <script src="js/app.min.js"></script>
 </body>
 
 </html>
